# throttle-me

./: .gitignore  .shellcheckrc  AGENTS.md  CLAUDE_NOTES.md  CODEX_DONE.md  NSA-THEME-COMPLETE.md  OPTION-C-COMPLETE.md  PHASE1-COMPLETE.md  PHASE2-COMPLETE.md  PHASE3B-COMPLETE.md  PHASE4A-COMPLETE.md  PHASE4A-PART2-COMPLETE.md  PRD.md  PRODUCT_ANALYSIS.md  README.md  THEME-FIXED.md  install.sh  test-theme.sh  throttle-me  throttle-me-daemon  throttle-me.original
.claude/: settings.json
.claude/agents/: bash-module-reviewer.md
.claude/commands/: discuss.md  double-check.md  plan.md  setup-development-environment.md  setup-linting.md
.claude/core/: essential.md  tools-cli.md  tools-mcp.md
.claude/docs/: architecture.md  deployment.md  testing.md
.claude/scripts/: guard-original.sh  shellcheck-on-edit.sh  update-tools.sh  verify-env.sh
.claude/workflows/: development.md  (+1 more)
config/: config.template  throttle-me-daemon.service  throttle-me.conf
dashboard/: README.md  pyproject.toml
dashboard/src/throttle_me_dashboard/: __init__.py  __main__.py  app.py  collectors.py  renderers.py  styles.tcss
dashboard/tests/: test_app.py  test_collectors.py
docs/: DAEMON.md  QUICKSTART.md
lib/: config.sh  core.sh  daemon.sh  detection.sh  iptables.sh  logging.sh  network.sh  presets.sh  retention.sh  stats.sh  ui-dialog.sh  ui-theme.sh  utils.sh
scripts/: bypass-tethering  bypass-tethering.installed  disable-bypass-tethering  disable-bypass-tethering.installed
windows/: README.md  VERSION  install.ps1  throttle-me.cmd  throttle-me.ps1  uninstall.ps1
(+21 files in other folders)
