[project]
name = "throttle-me-dashboard"
version = "0.1.0"
description = "Textual command center for throttle-me"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
    "rich>=13.7",
    "textual>=0.80",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
throttle-me-dashboard = "throttle_me_dashboard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests", "dashboard/tests"]
pythonpath = ["src", "dashboard/src"]
